--- a/css/style.css
+++ b/css/style.css
@@ -8189,7 +8189,7 @@ body {
       display: block;
       max-height: 100%; }
   /* line 24, ../scss/fxj/_navbar-header.scss */
-  .navbar-header .search-block-form {
+  .navbar-header .region-navigation > .search-block-form {
     top: 10px;
     right: 15px;
     position: absolute;
@@ -8327,12 +8327,88 @@ body {
     .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):hover:before, .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):focus:before {
       color: #333333; }
   /* line 197, ../scss/fxj/_navbar-header.scss */
-  .navbar-header .search-block-form {
+  .navbar-header .region-navigation > .search-block-form {
     right: 0px;
     top: 15px; }
     /* line 201, ../scss/fxj/_navbar-header.scss */
-    .navbar-header .search-block-form .form-item {
+    .navbar-header .region-navigation > .search-block-form .form-item {
       margin-bottom: 0; } }
+/* line 208, ../scss/fxj/_navbar-header.scss */
+#block-fxj-alpha-search {
+  display: none; }
+
+/* line 211, ../scss/fxj/_navbar-header.scss */
+.spb-popup-main-wrapper {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  background: rgba(255, 255, 255, 0.9) url(../logo.svg) no-repeat 10vw 1rem;
+  background-size: 200px;
+  border: 0; }
+  /* line 217, ../scss/fxj/_navbar-header.scss */
+  .spb-popup-main-wrapper .search-block-form {
+    margin: 20vh 10vw 0 10vw; }
+    /* line 220, ../scss/fxj/_navbar-header.scss */
+    .spb-popup-main-wrapper .search-block-form .form-control {
+      background-color: transparent;
+      font-size: 3rem; }
+      /* line 224, ../scss/fxj/_navbar-header.scss */
+      .spb-popup-main-wrapper .search-block-form .form-control::-webkit-input-placeholder {
+        /* Chrome/Opera/Safari */
+        font-size: 3rem; }
+      /* line 227, ../scss/fxj/_navbar-header.scss */
+      .spb-popup-main-wrapper .search-block-form .form-control:-ms-input-placeholder {
+        /* IE 10+ */
+        font-size: 3rem; }
+      /* line 230, ../scss/fxj/_navbar-header.scss */
+      .spb-popup-main-wrapper .search-block-form .form-control::-ms-input-placeholder {
+        font-size: 3rem; }
+      /* line 233, ../scss/fxj/_navbar-header.scss */
+      .spb-popup-main-wrapper .search-block-form .form-control::placeholder {
+        font-size: 3rem; }
+    /* line 238, ../scss/fxj/_navbar-header.scss */
+    .spb-popup-main-wrapper .search-block-form .form-submit {
+      background-color: transparent;
+      font-size: 2rem; }
+
+/* line 244, ../scss/fxj/_navbar-header.scss */
+.spb_top_center {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0; }
+
+/* line 250, ../scss/fxj/_navbar-header.scss */
+.block-fxj-alpha-search-modal-minimize {
+  display: none; }
+
+/* line 253, ../scss/fxj/_navbar-header.scss */
+.block-fxj-alpha-search-modal-close {
+  width: 4rem;
+  height: 4rem;
+  background-color: transparent;
+  border: 0;
+  font-size: 4rem;
+  line-height: 1;
+  position: relative;
+  right: 10vw;
+  top: 1rem; }
+
+/* line 263, ../scss/fxj/_navbar-header.scss */
+#search-popup {
+  border: 0;
+  display: none;
+  background-color: transparent;
+  border-color: 0; }
+  /* line 269, ../scss/fxj/_navbar-header.scss */
+  #search-popup:hover, #search-popup:focus {
+    color: #16a085; }
+
+/* line 274, ../scss/fxj/_navbar-header.scss */
+.simple-popup-blocks-global + #search-popup {
+  display: block;
+  position: absolute;
+  right: 10px;
+  top: 15px; }
+
 /* line 2, ../scss/fxj/_forms.scss */
 ::-webkit-input-placeholder {
   color: #555555 !important;
