--- a/scss/fxj/_navbar-header.scss
+++ b/scss/fxj/_navbar-header.scss
@@ -1,18 +1,56 @@
 //Navbar
 .navbar {
   @include shadow();
+  background-color: transparent;
   .block {
     margin-bottom: 0;
   }
+  .navbar-toggle {
+    border: 0;
+    left: 15px;
+    position: absolute;
+    top: 7px;
+
+    .icon-bar {
+      @include transition(0.5s);
+      background-color: $gray-dark;
+    }
+
+    &:hover {
+      background-color: transparent;
+      .icon-bar {
+        background-color: $brand-primary;
+      }
+    }
+    &:focus {
+      background-color: transparent;
+    }
+
+    &[aria-expanded="true"] {
+      .icon-bar:nth-of-type(2) {
+        @include rotate(45deg);
+        bottom: -6px;
+        position: relative;
+      }
+      .icon-bar:nth-of-type(3) {
+        width: 2px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      .icon-bar:nth-of-type(4) {
+        @include rotate(-45deg);
+        bottom: 6px;
+        position: relative;
+      }
+    }
+  }
 }
 .navbar-header {
-
-  width: 100%;
-
+  background-color: white;
   .logo {
     display: block;
     height: 50px;
-    margin: 8px 15px 8px 60px;
+    margin: 8px 15px 8px 70px;
     padding: 0;
 
     img {
@@ -28,172 +66,144 @@
     width: calc(100% - 250px);
     max-width: 200px;
   }
+}
 
-  /* menu */
-  #superfish-main-toggle {
-    @include square(40px);
-    color: $gray-dark;
-    cursor: pointer;
-    font-size: 30px;
-    left: 15px;
-    line-height: 1.4;
-    padding: 0;
-    position: absolute;
-    text-align: center;
-    text-decoration: none;
-    top: 10px;
+.navbar-nav {
 
-    @extend .glyphicon;
-    @extend .glyphicon-menu-hamburger;
-
-    &.sf-expanded {
-      @extend .glyphicon-remove;
-    }
-
+  margin: 0;
+  .dropdown-toggle {
     &:hover,
     &:focus {
-      background-color: $gray-dark;
-      color: white;
-    }
-
-    span {
-      @extend .sr-only;
+      .caret {
+        color: $brand-primary;
+      }
     }
   }
-
-  .menu {
-
-    > li {
-      &:not(:last-of-type) {
-        .menu-enlace {
-          color: $gray-dark;
-          text-decoration: none;
-
-          &:not(.menuparent) {
-            &:hover,
-            &:focus {
-              color: $brand-primary;
-            }
-          }
-        }
-      }
-
-      &:last-of-type {
-        padding: 14px 21px;
-
-        .menu-enlace {
-          @include btn-donate();
-          border-radius: 2.5rem;
-          display: inline-block;
-          text-decoration: none;
-        }
+  .btn-group {
+    &.open {
+      & + .dropdown-menu {
+        display: block;
+        border: 0;
       }
     }
+    .btn {
+      font-size: 1.6rem;
+      color: $gray-light;
+    }
+    + .dropdown-menu a {
+      font-size: 1.6rem;
+      font-weight: 300;
+    }
 
-    .menu-sub {
-      &:not(.sf-no-children) {
-        &:before {
-          @extend .glyphicon;
-          @extend .glyphicon-menu-down;
+    .btn {
+      @include box-shadow(none);
+      background-color: transparent;
+      border: 0;
+      border-radius: 0;
+    }
+  }
+  > li {
 
-          position: absolute;
-          right: 0;
-          top: 1em;
-        }
-        &.sf-expanded:before {
-          @extend .glyphicon-menu-up;
-        }
-        &:hover,
-        &:focus {
-          &:before {
-            color: $brand-primary;
-          }
-        }
+    a,
+    .open a {
+      color: $gray-dark;
+      background-color: transparent;
+
+      &:hover,
+      &:focus {
+        color: $gray-dark;
+        background-color: transparent;
+        text-decoration: underline;
       }
+    }
+    .active a {
+      color: $brand-primary;
+      background-color: transparent;
+
+      &:hover,
+      &:focus {
+        color: $brand-primary;
+        background-color: transparent;
+        text-decoration: underline;
+      }
+    }
+    &.active:not(:last-of-type) {
 
     }
-    .sf-has-clone-parent {
-      margin-left: 15px;
+
+    &:last-of-type {
+
+      > a {
+        @include btn-donate();
+        border-radius: 2.5rem;
+        display: inline-block;
+        text-decoration: none;
+      }
     }
   }
 }
+@media (max-width: $screen-xs-max) {
+  .navbar-fixed-top .navbar-collapse {
+    background-color: hsla(0,0%,0%,.3);
+    height: 100vh;
+    max-height: 100vh;
+    padding: 0 0 30vh 0;
+    .region-navigation-collapsible {
+      background-color: hsla(0,0%,100%,.95);
+    }
+  }
+  .navbar-nav {
+    padding: 2rem;
+    .caret {
+      border-width: 10px;
+    }
 
-@media (min-width: $screen-md-min) {
+    .btn:not(.dropdown-toggle) {
+      font-size: 2rem;
+      text-align: left;
+      width: 60vw;
+    }
+    .dropdown-menu {
+      @include box-shadow(none);
+      background-color: transparent;
+      position: relative;
+
+      a {
+        font-size: 2rem;
+      }
+    }
+    .btn-group {
+      &.open {
+        & + .dropdown-menu {
+          float: none;
+          position: static;
+        }
+      }
+    }
+    > li {
+      &:last-of-type {
+        margin: 2rem 0;
+        a {
+          font-size: 2rem;
+          font-weight: 400;
+        }
+      }
+    }
+  }
+}
+@media (min-width: $screen-sm-min) {
+  .navbar {
+    background-color: white;
+  }
   .navbar-header {
+    width: 100%;
     .region-navigation {
       position: relative;
     }
     .logo {
       margin-left: 0;
     }
-    .block-superfish {
-      .menu {
-        margin-right: 250px;
-        text-align: right;
 
-        > li {
-          display: inline-block;
-          float: none;
-          margin-right: 1px;
-          &:not(:last-of-type) {
-            > a {
-              border-bottom: 5px solid white;
-              bottom: -1px;
-              font-size: 1.8rem;
-              font-weight: 300;
-              padding: 20px 25px 20px 20px;
-              position: relative;
-
-              &:hover,
-              &:focus {
-                border-color: $brand-primary;
-              }
-            }
-
-            &.sfHover,
-            &.active-trail {
-              > a {
-                border-color: $brand-primary;
-              }
-            }
-            &.sfHover{
-              > ul {
-                top: auto;
-              }
-            }
-
-          }
-          &:last-of-type {
-            padding: 9px 20px;
-          }
-
-          > ul {
-            @include shadow-sm();
-            background-color: white;
-            text-align: left;
-
-            > li > a {
-              font-weight: 300;
-              font-size: 16px;
-              padding: 10px 20px;
-            }
-          }
-        }
-        .menu-sub {
-          &:not(.sf-no-children) {
-            &:before {
-              top: 24px;
-            }
-            &:hover,
-            &:focus {
-              &:before {
-                color: $gray-dark;
-              }
-            }
-          }
-        }
-      }
-    }
     .region-navigation > .search-block-form {
       right: 0px;
       top: 15px;
@@ -203,7 +213,79 @@
       }
     }
   }
+  .region-navigation-collapsible{
+    position: relative;
+  }
+  .navbar-nav {
+    position: absolute;
+    right: 55px;
+    top: 10px;
+
+    > li {
+      .btn {
+        padding: 15px 0;
+
+        &:not(.dropdown-toggle) {
+          border-bottom: 5px solid white;
+          font-weight: 300;
+          text-decoration: none;
+
+          &:hover,
+          &:focus {
+            color: $brand-primary;
+          }
+
+          &:after {
+            color: $gray-light;
+            content: "|";
+            display: inline-block;
+            margin: 0 0 0 8px;
+          }
+        }
+
+      }
+      &.active {
+        .btn:not(.dropdown-toggle) {
+          border-bottom-color: $brand-primary;
+        }
+      }
+      &:not(:last-of-type) {
+        margin: 0 5px 0 0;
+        > a {
+
+          &:hover,
+          &:focus {
+            border-color: $brand-primary;
+          }
+        }
+      }
+      &:last-of-type {
+        a {
+          font-size: 1.4rem;
+          margin: 5px 0 0 0;
+          padding: 10px;
+        }
+      }
+    }
+  }
 }
+@media (min-width: $screen-md-min) {
+  .navbar-nav {
+    > li {
+      &:not(:last-of-type) {
+        margin: 0 10px;
+      }
+      &:last-of-type {
+        a {
+          font-size: 1.6rem;
+          margin: 0 10px;
+          padding: 15px;
+        }
+      }
+    }
+  }
+}
+
 //spb popup on serach block
 #block-fxj-alpha-search {
   display: none;
@@ -274,6 +356,6 @@
 .simple-popup-blocks-global + #search-popup {
   display: block;
   position: absolute;
-  right: 10px;
-  top: 15px;
+  right: 5px;
+  top: 20px;
 }
