--- a/scss/fxj/_footer.scss
+++ b/scss/fxj/_footer.scss
@@ -98,7 +98,7 @@
   padding: 15px;
 }
 .region-sticky-footer{
-  padding: 5px 15px;
+  padding: 0 15px;
 }
 //Sticky footer
 .sticky-footer {
@@ -110,6 +110,9 @@
   &.container-fluid {
     background-color: $brand-quaternary;
   }
+  .block-dropdown-language .dropdown .language-link {
+    font-size: 1.3rem;
+  }
   .menu.nav {
     @extend .nav-pills;
     border: 0;
@@ -120,6 +123,7 @@
     a {
       background-color: $brand-quaternary;
       color: white;
+      font-size: 1.3rem;
 
       &:hover,
       &:focus {
@@ -150,7 +154,7 @@
     .a2a_kit {
       position: relative;
       right: 0;
-      bottom: 2em;
+      bottom: 2rem;
     }
   }
 }
@@ -241,7 +245,7 @@
     }
   }
 }
-@media (max-width: $screen-sm-min) {
+@media (max-width: $screen-xs-max) {
   .sticky-footer {
     .menu.nav a {
       padding: 5px 15px;
